--- a/assets/css/skills.css
+++ b/assets/css/skills.css
@@ -17,7 +17,7 @@
     text-align: center;
     border-right: 0;
     border-bottom: 1px solid var(--primary-light);
-    color: var(--primary);
+    color:var(--primary);
     padding: 5rem 2rem;
 }
 .skills .skill:last-child{
@@ -40,9 +40,9 @@
     height: 4rem;
 }
 .skill-title{
-    width: bold;
+    font-weight: bold;
     font-size: 2rem;
-    margin: 3rem;
+    margin: 3rem 0;
 }
 .skill-desc{
     font-size: 1.7rem;
@@ -52,14 +52,14 @@
     margin-top: 5rem;
     margin-bottom: 1rem;
     font-size: 1.7rem;
-    color: var(--foreground);
+    color:var(--foreground);
 }
 .skill-txt{
     font-size: 1.7rem;
     line-height: 2.5rem;
 }
 @media(width>600px){
-    .skill .grid{
+    .skills .grid{
         grid-template-columns: repeat(3, 1fr);
     }
     .skills .skill{
